refactor: prefer Path.of() instead of Paths.get()
openrewrite: https://docs.openrewrite.org/recipes/java/migrate/nio/file/pathsgettopathof