@@ -2,7 +2,7 @@ package persistent.common.util;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -31,6 +31,6 @@ public class Args {
   public static List<String> readAllLines(String fileArg) throws IOException {
     String file = isArgsFile(fileArg) ? fileArg.substring(1) : fileArg;
 
-    return Files.readAllLines(Paths.get(file));
+    return Files.readAllLines(Path.of(file));
   }
 }
